# editty

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
assets/: sample.vtt
packaging/homebrew/: editty.rb
src/: app.rs  chapter.rs  cli.rs  keymap.rs  main.rs  util.rs  whisperx.rs
src/ffmpeg/: cut.rs  frame.rs  mod.rs  playback.rs  probe.rs
src/player/: clock.rs  image_pane.rs  mod.rs  probe.rs  shm.rs
src/ui/: chapters.rs  cuelist.rs  help.rs  mod.rs  statusbar.rs  timeline.rs  video.rs
src/vtt/: mod.rs
