[package]
name = "editty"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Terminal video editor using the kitty graphics protocol"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-channel = "0.5.15"
libc = "0.2.186"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
subtp = "0.2.0"
thiserror = "2.0.18"
